trying to fix side scroll on iphone

--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ button:active {
 .game-prefiew-image div {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .game-prefiew-image div div {
